<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_str"
            android:textColor="@color/lightBlue"
            android:textStyle="bold"
            android:textSize="40sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/history_EDT_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/enter_phone_str"
            android:background="@drawable/edit_text_background"
            android:padding="15dp"
            android:elevation="5dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/history_EDT_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_date_str"
            android:background="@drawable/edit_text_background"
            android:padding="15dp"
            android:elevation="5dp"
            android:layout_marginTop="20dp"/>


        <Button
            android:id="@+id/history_BTN_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_str"
            android:textStyle="bold"
            android:background="@drawable/button_background"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/history_TXT_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_activities_found_str"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/lightBlue"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_RCV_activities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</FrameLayout>