<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LiveLocationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/live_spy_str"
                android:textColor="@color/lightBlue"
                android:textStyle="bold"
                android:textSize="40sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/live_EDT_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/enter_phone_str"
                android:background="@drawable/edit_text_background"
                android:padding="15dp"
                android:elevation="5dp"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/live_BTN_spy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spy_str"
                android:textStyle="bold"
                android:background="@drawable/button_background"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_str"
                        android:textStyle="bold"
                        android:textColor="@color/lightBlue"/>
                    <TextView
                        android:id="@+id/live_TXT_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_str"
                        android:textStyle="bold"
                        android:textColor="@color/lightBlue"/>
                    <TextView
                        android:id="@+id/live_TXT_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_str"
                        android:textStyle="bold"
                        android:textColor="@color/lightBlue"/>
                    <TextView
                        android:id="@+id/live_TXT_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_str"
                        android:textStyle="bold"
                        android:textColor="@color/lightBlue"/>
                    <TextView
                        android:id="@+id/live_TXT_activity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <fragment
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/live_FRG_map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>
    </LinearLayout>

</FrameLayout>