<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HotZonesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_choose_str"
                    android:textStyle="bold"
                    android:textColor="@color/lightBlue"
                    android:textSize="20sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="5dp">
                <ImageButton
                    android:id="@+id/hot_IMB_running"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_running"
                    android:scaleType="fitCenter"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginRight="10dp" />

                <ImageButton
                    android:id="@+id/hot_IMB_driving"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_driving"
                    android:scaleType="fitCenter"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <ImageButton
                    android:id="@+id/hot_IMB_walking"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_walking"
                    android:scaleType="fitCenter"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_str"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/lightBlue"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/red_str"
                            android:textSize="20sp"
                            android:textColor="@color/red"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/red_info_str"
                            android:textSize="15sp"
                            android:textColor="@color/lightBlue"/>
                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yellow_str"
                        android:textSize="20sp"
                        android:textColor="@color/yellow"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yellow_info_str"
                        android:textSize="15sp"
                        android:textColor="@color/lightBlue"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/green_str"
                        android:textSize="20sp"
                        android:textColor="@color/green"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/green_info_str"
                        android:textSize="15sp"
                        android:textColor="@color/lightBlue"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <fragment
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/hot_FRG_map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

</FrameLayout>