<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDetailsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_info_str"
            android:textStyle="bold"
            android:textColor="@color/lightBlue"
            android:textSize="50sp"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_str"
                    android:textStyle="bold"
                    android:textColor="@color/lightBlue"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/details_TXT_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_str"
                    android:textStyle="bold"
                    android:textColor="@color/lightBlue"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/detail_TXT_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time_str"
                    android:textStyle="bold"
                    android:textColor="@color/lightBlue"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/details_TXT_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time_str"
                    android:textStyle="bold"
                    android:textColor="@color/lightBlue"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/details_TXT_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <fragment
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/details_FRG_map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>



</LinearLayout>